--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-spring.data.mongodb.uri=spotifind
-spring.data.mongodb.database=mongodb+srv://hareshjayant:TJEtds5VvPupkS5o@spotifind.udgc8hq.mongodb.net/
+spring.data.mongodb.uri=mongodb+srv://hareshjayant:TJEtds5VvPupkS5o@spotifind.udgc8hq.mongodb.net/
+spring.data.mongodb.database=spotifind
